kubernetes/apps/anythingllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anythingllm
  namespace: anythingllm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - anythingllm.gairelab.uk
      secretName: wildcard-gairelab-uk-tls
  rules:
    - host: anythingllm.gairelab.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anythingllm
                port:
                  number: 80
